UPDATES, blog contents

--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -1,6 +1,6 @@
 ---
 author: FDSEVEN
-layout: ../layouts/AboutLayout.astro
+layout: ../layouts/PrivacyLayout.astro
 title: Privacy Policy
 type: page
 ---
