--- a/src/content/blog/scoreboard-premier-league-2324-by-fdseven.mdx
+++ b/src/content/blog/scoreboard-premier-league-2324-by-fdseven.mdx
@@ -54,7 +54,6 @@ CODE : <br />
 Update config file in Man. City P1/P1-EPL (as you have) in kit server folder
 
 CODE : <br />
-`UniColor_Color1= #6CABDD`
 
 **THAT'S IT**
 
@@ -65,7 +64,7 @@ CODE : <br />
     targetNew={true}
     title="EPL Scoreboard"
     href="https://modsfire.com/7Nynv6EoeJSZ423"
-    className="bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
+    className="[&>p]:!m-0 bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
   >
     EPL Scoreboard
   </LinkButton>
@@ -73,7 +72,7 @@ CODE : <br />
     targetNew={true}
     title="EPL Emblems"
     href="https://modsfire.com/8Gbl5zyPK0qE2nu"
-    className="bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
+    className="[&>p]:!m-0 bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
   >
     EPL Emblems
   </LinkButton>
@@ -81,7 +80,7 @@ CODE : <br />
     targetNew={true}
     title="EPL Fonts"
     href="https://modsfire.com/w5HsD97ygXzK1Al"
-    className="bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
+    className="[&>p]:!m-0 bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
   >
     EPL Fonts
   </LinkButton>
