UPDATES, button contents

--- a/src/content/blog/scoreboard-premier-league-2324-by-fdseven.mdx
+++ b/src/content/blog/scoreboard-premier-league-2324-by-fdseven.mdx
@@ -64,7 +64,7 @@ CODE : <br />
     targetNew={true}
     title="EPL Scoreboard"
     href="https://modsfire.com/7Nynv6EoeJSZ423"
-    className="[&>p]:!m-0 bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
+    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
   >
     EPL Scoreboard
   </LinkButton>
@@ -72,7 +72,7 @@ CODE : <br />
     targetNew={true}
     title="EPL Emblems"
     href="https://modsfire.com/8Gbl5zyPK0qE2nu"
-    className="[&>p]:!m-0 bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
+    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
   >
     EPL Emblems
   </LinkButton>
@@ -80,7 +80,7 @@ CODE : <br />
     targetNew={true}
     title="EPL Fonts"
     href="https://modsfire.com/w5HsD97ygXzK1Al"
-    className="[&>p]:!m-0 bg-skin-accent px-4 rounded-full !decoration-transparent !text-skin-inverted hover:bg-skin-fill border border-skin-accent transition"
+    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
   >
     EPL Fonts
   </LinkButton>
