--- a/src/content/blog/scoreboard-premier-league-2324-by-fdseven.mdx
+++ b/src/content/blog/scoreboard-premier-league-2324-by-fdseven.mdx
@@ -20,6 +20,8 @@ import LinkButton from "@components/LinkButton.astro";
 
 ## Proudly present & release my first custom scoreboard of Premier League 2023
 
+<hr />
+
 ### INSTALATION
 
 This scoreboard using league logo, so you must update EPL logo at livecpk folder or patch folder `"common\render\symbol\emblemLc"`
@@ -55,7 +57,7 @@ Update config file in Man. City P1/P1-EPL (as you have) in kit server folder
 
 CODE : <br />
 
-**THAT'S IT**
+**THAT'S IT ALL**
 
 ### DOWNLOADS
 
