--- a/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
+++ b/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
@@ -10,7 +10,7 @@ tags:
   - scoreboard
   - tutorial
   - downloads
-description: post description
+description: Proudly present & release my first custom scoreboard of Premier League 2023
 type: blog
 ogImage: /assets/spoiler-img.png
 lastmod: 2023-11-29T20:37:42.880Z
@@ -50,6 +50,7 @@ export const BUTTONS = [
 ## Proudly present & release my first custom scoreboard of Premier League 2023
 
 {" "}
+
 <hr />
 
 ### INSTALATION
@@ -59,6 +60,7 @@ This scoreboard using league logo, so you must update EPL logo at livecpk folder
 If you're using EvoWeb Patch like I'm using too, the folder structure shows like image below :
 
 {" "}
+
 <Figure
   title="livecpk folder structure"
   src="/assets/1696847876032.png"
@@ -94,12 +96,15 @@ CODE : <br />
 Here's some previews
 
 {" "}
+
 <Figure title="Preview 1" src="/assets/spoiler-img.png" />
 
 {" "}
+
 <Figure title="Preview 2" src="/assets/spoiler-img2.png" />
 
 {" "}
+
 <Figure title="Preview 3" src="/assets/spoiler-img3.png" />
 
 ### DOWNLOADS
