--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -3,8 +3,8 @@ layout: ../layouts/AboutLayout.astro
 title: "About"
 ---
 
-Bagi semua penggemar sepak bola, pasti sudah tidak asing lagi dengan game Pro Evolution Soccer. Maka dari itu, PESMANIA menghadirkan add-on dan update terbaik bagi semua gamer terutama PES, untuk tetap semangat dan memiliki antusias yang tinggi. Dengan ini, PESMANIA juga berusaha menjadi platform terbaik bagi mereka yang mencari simulator sepak bola terbaik di dunia. Kami membagikan modul terbaru yang memungkinkan memiliki banyak papan skor untuk kompetisi atau liga apa pun. Patch terbaru dapat menjadikan semua tim berlisensi dengan nama resmi, logo, kit, dan yang lainnya.
+For all football lovers, Pro Evolution Soccer brings magic to football game. With this in mind, PESMania offers the best add-ons and updates for all players to lift their spirits. This makes PESMania the best platform for those looking for the best football simulator on the market. We share our latest module that allows players to take advantage of rich scoreboards for any competition or league. With the latest patch, you get all licensed teams with official names, logos, jerseys, and more.
 
-Selain berbagi patch dan modifikasi gratis, PESMANIA juga merupakan pilihan bagus untuk Anda jika Anda ingin memainkan video game sepak bola di stadion yang fantastis. Bahkan jika Anda tidak terlalu paham untuk melakukan perubahan pada PES dan memodifikasinya, Anda dapat menggunakan bantuan tutorial dan trik yang kami sediakan. Kemudian, ada juga bermacam tools untuk modifikasi semua itu yang kami share untuk dapat mengubah stadion dan pertandingan membosankan menjadi lingkungan permainan yang menarik.
+In addition to free shared patches and fixes, PESMania is also a great option if you want to play football video games with amazing stadiums. Even if you don't know much about how to make changes and fix PES, you can still take advantage of the tutorials and tricks provided. Then comes cutting-edge editing tools that can transform boring stadiums and matches into engaging gaming environments.
 
-Secara keseluruhan, kami bercita-cita untuk memberikan bantuan dan kemudahan kepada para pemain PES sehingga mereka dapat memodifikasi permainan & merasakan permainan Pro Evolution Soccer yang mendekati karakteristik asli nya. Selain itu, platform kami adalah platform terbaik bagi mereka yang ingin terus mendapatkan berita dan informasi terkini terkait eFootball. Singkatnya, kami menyediakan layanan kelas atas kepada semua penggemar PES untuk pengalaman bermain game tanpa kerumitan. ENJOY!
+Overall, our amazing goal to provide as much support as possible for PES players to experience the great Pro Evolution Soccer game without any hurdles. Additionally, our platform is the perfect platform for anyone who wants to stay up to date with news and information related to eFootball. In other words, our company provides high-end services that provide a hassle-free gaming experience to all his PES enthusiasts. PES Modding knows how to live up to its name and leaves no stone unturned to provide PES players with amazing tools and graphics for thrilling adventures.
