--- a/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
+++ b/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
@@ -10,7 +10,7 @@ tags:
   - scoreboard
   - tutorial
   - downloads
-description: Proudly present & release my first custom scoreboard of Premier League 2023
+description: Proudly present and release my first custom scoreboard of Premier League 2023
 type: blog
 ogImage: /assets/spoiler-img.png
 lastmod: 2023-11-29T20:37:42.880Z
