--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,6 +1,6 @@
 ---
 layout: ../layouts/AboutLayout.astro
-title: "About"
+title: "About Us"
 ---
 
 For all football lovers, Pro Evolution Soccer brings magic to football game. With this in mind, PESMania offers the best add-ons and updates for all players to lift their spirits. This makes PESMania the best platform for those looking for the best football simulator on the market. We share our latest module that allows players to take advantage of rich scoreboards for any competition or league. With the latest patch, you get all licensed teams with official names, logos, jerseys, and more.
