UPDATES, ads & button link downloads

--- a/src/content/blog/premier-league-kitpack-season-2324-pes-2021-by-migelanhel.mdx
+++ b/src/content/blog/premier-league-kitpack-season-2324-pes-2021-by-migelanhel.mdx
@@ -39,6 +39,7 @@ import LinkButton from "@components/LinkButton.astro";
 ## Here's English Premier League Kitpack by Migelanhel
 
 {" "}
+
 <hr />
 
 ### Features
@@ -62,38 +63,47 @@ import LinkButton from "@components/LinkButton.astro";
 ### previews
 
 {" "}
+
 <Figure title="Preview 1" src="/assets/11111.png" />
 
 {" "}
+
 <Figure title="Preview 2" src="/assets/22221.png" />
 
 {" "}
+
 <Figure title="Preview 3" src="/assets/1s.png" />
 
 {" "}
+
 <Figure title="Preview 4" src="/assets/3333333.png" />
 
 {" "}
+
 <Figure title="Preview 5" src="/assets/4444.png" />
 
 {" "}
+
 <Figure title="Preview 6" src="/assets/555555.png" />
 
 {" "}
+
 <Figure title="Preview 7" src="/assets/EPL%202024.png" />
 
 {" "}
+
 <Figure title="Preview 8" src="/assets/fontnumber.png" />
 
 ### Downloads
 
 {" "}
+
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
     title="PART 1"
     href="https://modsfire.com/8rUsX05inxr5000"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -110,13 +120,13 @@ import LinkButton from "@components/LinkButton.astro";
         ></path>{" "}
       </g>
     </svg>
-    PART 1
+    <p class="group-hover:!text-skin-accent transition duration-500">PART 1</p>
   </LinkButton>
   <LinkButton
     targetNew={true}
     title="Part 2"
     href="https://modsfire.com/Z6ELH1YjJVtt1LH"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -133,13 +143,13 @@ import LinkButton from "@components/LinkButton.astro";
         ></path>{" "}
       </g>
     </svg>
-    PART 2
+    <p class="group-hover:!text-skin-accent transition duration-500">PART 2</p>
   </LinkButton>
   <LinkButton
     targetNew={true}
     title="Part 3"
     href="https://modsfire.com/z0mjy9vC137WGF0"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -156,12 +166,12 @@ import LinkButton from "@components/LinkButton.astro";
         ></path>{" "}
       </g>
     </svg>
-    PART 3
+    <p class="group-hover:!text-skin-accent transition duration-500">PART 3</p>
   </LinkButton>
   <LinkButton
     title="Color Fixed"
     href="https://modsfire.com/0BP65mKu79t4Vrx"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -178,7 +188,9 @@ import LinkButton from "@components/LinkButton.astro";
         ></path>{" "}
       </g>
     </svg>
-    Color Fixed
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      Color Fixed
+    </p>
   </LinkButton>
 </div>
 
