--- a/src/content/blog/efifa-pes-project-integrates-ea-sports-fifa-database-into-pes-2021.mdx
+++ b/src/content/blog/efifa-pes-project-integrates-ea-sports-fifa-database-into-pes-2021.mdx
@@ -38,6 +38,7 @@ import LinkButton from "@components/LinkButton.astro";
   ## eFIFA PES PROJECT integrates the EA Sports FIFA database into PES2021. This means all players in the FIFA DB are also available in PES and their their stats!
 
 {" "}
+
 <hr />
 
 ### This is amazing PES 2021 patch from Hollywoodkills
@@ -103,12 +104,13 @@ https://www.patreon.com/hollywoodkills
 ### Downloads
 
 {" "}
+
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
     title="PART 1"
     href="https://www.mediafire.com/folder/mnytb8mh4sif4/EPP_23_-_Version_3.0_-_All_in_One"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -125,13 +127,15 @@ https://www.patreon.com/hollywoodkills
         ></path>{" "}
       </g>
     </svg>
-    EPP 23 ALL IN ONE V3
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPP 23 ALL IN ONE V3
+    </p>
   </LinkButton>
   <LinkButton
     targetNew={true}
     title="Part 2"
     href="https://www.mediafire.com/folder/6x92jwpdg2n46/EPP_24_-_VERSION_3.3"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -148,7 +152,9 @@ https://www.patreon.com/hollywoodkills
         ></path>{" "}
       </g>
     </svg>
-    EPP 24 UPDATE V3.3
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPP 24 UPDATE V3.3
+    </p>
   </LinkButton>
 </div>
 
