--- a/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
+++ b/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
@@ -85,12 +85,13 @@ Here's some previews
 ### DOWNLOADS
 
 {" "}
+
 <div className="flex flex-wrap gap-2">
   <LinkButton
     targetNew={true}
     title="EPL Scoreboard"
     href="https://modsfire.com/7Nynv6EoeJSZ423"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -107,13 +108,15 @@ Here's some previews
         ></path>{" "}
       </g>
     </svg>
-    EPL Scoreboard
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPL Scoreboard
+    </p>
   </LinkButton>
   <LinkButton
     targetNew={true}
     title="EPL Emblems"
     href="https://modsfire.com/8Gbl5zyPK0qE2nu"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -130,13 +133,15 @@ Here's some previews
         ></path>{" "}
       </g>
     </svg>
-    EPL Emblems
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPL Emblems
+    </p>
   </LinkButton>
   <LinkButton
     targetNew={true}
     title="EPL Fonts"
     href="https://modsfire.com/w5HsD97ygXzK1Al"
-    className="[&>p]:!m-0 [&>p]:!px-4 [&>p]:!text-skin-inverted [&>p:hover]:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent [&>p]:bg-skin-accent [&>p]:rounded-full !decoration-transparent [&>p]:hover:bg-skin-fill [&>p]:border [&>p]:border-skin-accent [&>p]:transition"
+    className="group flex items-center [&>p]:!m-0 px-4 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500"
   >
     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -153,7 +158,9 @@ Here's some previews
         ></path>{" "}
       </g>
     </svg>
-    EPL Fonts
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPL Fonts
+    </p>
   </LinkButton>
 </div>
 
