--- a/src/content/blog/efifa-pes-project-integrates-ea-sports-fifa-database-into-pes-2021.mdx
+++ b/src/content/blog/efifa-pes-project-integrates-ea-sports-fifa-database-into-pes-2021.mdx
@@ -122,10 +122,8 @@ https://www.patreon.com/hollywoodkills
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">
-      EPP 23 ALL IN ONE V3
-    </p>
-  </LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">EPP 23 ALL IN ONE V3</p>
+</LinkButton>
   <LinkButton
     targetNew={true}
     title="Part 2"
@@ -146,10 +144,8 @@ https://www.patreon.com/hollywoodkills
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">
-      EPP 24 UPDATE V3.3
-    </p>
-  </LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">EPP 24 UPDATE V3.3</p>
+</LinkButton>
 </div>
 
 </div>
