--- a/src/content/blog/new-premier-league-2023-replay-wipe-pes-2021.mdx
+++ b/src/content/blog/new-premier-league-2023-replay-wipe-pes-2021.mdx
@@ -101,10 +101,8 @@ I hope you like it, and enjoy it!
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">
-      Replay Wipe
-    </p>
-  </LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">Replay Wipe</p>
+</LinkButton>
 </div>
 
 </div>
