--- a/src/content/blog/premier-league-kitpack-season-2324-pes-2021-by-migelanhel.mdx
+++ b/src/content/blog/premier-league-kitpack-season-2324-pes-2021-by-migelanhel.mdx
@@ -164,10 +164,8 @@ import LinkButton from "@components/LinkButton.astro";
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">
-      Color Fixed
-    </p>
-  </LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">Color Fixed</p>
+</LinkButton>
 </div>
 
 ### Credits
