--- a/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
+++ b/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
@@ -105,10 +105,8 @@ Here's some previews
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">
-      EPL Scoreboard
-    </p>
-  </LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">EPL Scoreboard</p> 
+</LinkButton>
   <LinkButton
     targetNew={true}
     title="EPL Emblems"
@@ -129,10 +127,8 @@ Here's some previews
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">
-      EPL Emblems
-    </p>
-  </LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">EPL Emblems</p>
+</LinkButton>
   <LinkButton
     targetNew={true}
     title="EPL Fonts"
@@ -153,10 +149,8 @@ Here's some previews
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">
-      EPL Fonts
-    </p>
-  </LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">EPL Fonts</p>
+</LinkButton>
 </div>
 
 </div>
