--- a/src/content/blog/new-premier-league-2023-replay-wipe-pes-2021.mdx
+++ b/src/content/blog/new-premier-league-2023-replay-wipe-pes-2021.mdx
@@ -11,11 +11,16 @@ tags:
   - PES 2021
   - tutorial
   - downloads
-description: My first creation for custom mode on PES 2021 PC. I Made it by myself using video editor & converting tools. I watch the tutorial from Youtube
+description: My first creation custom mods on PES 2021 PC. I Made replay wipe Premier League 2023 by myself using video editor & converting tools.
 type: blog video cover
 coverImage: /assets/epl-replay-wipe.webp
 youtubeVideoId: NWnCrxACPuE
 lastmod: 2023-12-06T17:06:35.212Z
+keywords:
+  - PES
+  - Premier League
+  - Replay Wipe
+  - PES 2021
 ---
 
 import Modal from "@components/Modal.astro";
@@ -59,9 +64,9 @@ import LinkButton from "@components/LinkButton.astro";
 
 <div class="col-span-8 md:col-start-2 md:col-span-6 lg:col-start-2 lg:col-span-4 [&>h2]:!mt-0">
 
-## Hello there!
+## Hello there, this is English Premier League 2023 replay wipe for PES 2021!
 
-This is my first creation for custom mods on PES 2021 PC. I just try to made the reply wipe EPL 2023 using video editor & converting tools. I watch the tutorial from here
+This is my first creation for custom mods on PES 2021 PC. I just try to made the Replay Wipe Premier League 2023 using video editor & converting tools. I watch the tutorial from here
 
 <div class="aspect-video relative">
   <iframe
@@ -101,8 +106,10 @@ I hope you like it, and enjoy it!
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">Replay Wipe</p>
-</LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      Replay Wipe
+    </p>
+  </LinkButton>
 </div>
 
 </div>
