--- a/src/content/blog/premier-league-kitpack-season-2324-pes-2021-by-migelanhel.mdx
+++ b/src/content/blog/premier-league-kitpack-season-2324-pes-2021-by-migelanhel.mdx
@@ -14,6 +14,12 @@ description: Here’s an Awesome English Premier League Kitpack season 23/24 by 
 type: blog
 coverImage: /assets/EPL 2024.png
 lastmod: 2023-12-09T10:51:13.260Z
+keywords:
+  - Kitpack
+  - Kits
+  - PES
+  - Premier League
+  - PES 2021
 ---
 
 import Figure from "@components/Figure.astro";
@@ -164,8 +170,10 @@ import LinkButton from "@components/LinkButton.astro";
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">Color Fixed</p>
-</LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      Color Fixed
+    </p>
+  </LinkButton>
 </div>
 
 ### Credits
