--- a/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
+++ b/src/content/blog/the-new-scoreboard-premier-laegue-2023.mdx
@@ -1,8 +1,8 @@
 ---
 author: fdseven
 pubDatetime: 2023-11-29T20:37:42.880Z
-title: The New Scoreboard Premier Laegue 2023 PES 2021
-postSlug: the-new-scoreboard-premier-laegue-2023
+title: The New Scoreboard Premier League 2023 PES 2021
+postSlug: the-new-scoreboard-premier-league-2023
 featured: false
 draft: false
 tags:
@@ -10,11 +10,16 @@ tags:
   - scoreboard
   - tutorial
   - downloads
-description: Proudly present and release my first custom scoreboard of Premier League 2023
+description: Proudly present and release my first custom scoreboard of Premier League 2023 for PES 2021
 type: blog
 coverImage: /assets/spoiler-img.png
 lastmod: 2023-11-29T20:37:42.880Z
 isFeatured: false
+keywords:
+  - PES
+  - PES 2021
+  - Premier League
+  - Scoreboard
 ---
 
 import Figure from "@components/Figure.astro";
@@ -32,13 +37,13 @@ import LinkButton from "@components/LinkButton.astro";
 
 <div class="col-span-8 md:col-start-2 md:col-span-6 lg:col-start-2 lg:col-span-4 [&>h2]:!mt-0">
 
-## Proudly present & release my first custom scoreboard of Premier League 2023
+## Proudly present & release my first custom scoreboard of Premier League 2023 for PES 2021
 
 <hr />
 
 ### INSTALATION
 
-This scoreboard using league logo, so you must update EPL logo at livecpk folder or patch folder `"common\render\symbol\emblemLc"`
+This scoreboard using league logo, so you must update English Premier League logo at livecpk folder or patch folder `"common\render\symbol\emblemLc"`
 
 If you're using EvoWeb Patch like I'm using too, the folder structure shows like image below :
 
@@ -105,8 +110,10 @@ Here's some previews
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">EPL Scoreboard</p> 
-</LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPL Scoreboard
+    </p>
+  </LinkButton>
   <LinkButton
     targetNew={true}
     title="EPL Emblems"
@@ -127,8 +134,10 @@ Here's some previews
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">EPL Emblems</p>
-</LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPL Emblems
+    </p>
+  </LinkButton>
   <LinkButton
     targetNew={true}
     title="EPL Fonts"
@@ -149,8 +158,10 @@ Here's some previews
         ></path>
       </g>
     </svg>
-    <p class="group-hover:!text-skin-accent transition duration-500">EPL Fonts</p>
-</LinkButton>
+    <p class="group-hover:!text-skin-accent transition duration-500">
+      EPL Fonts
+    </p>
+  </LinkButton>
 </div>
 
 </div>
